--- a/5. ESG Score.ipynb
+++ b/5. ESG Score.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "230e0f66",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "dc13cf85",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "4bbde85f",
    "metadata": {},
    "outputs": [],
@@ -42,17 +42,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "6e301284",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stock_list = ['AAPL',  'APTV', 'BAC', 'BALL',  'BEP', 'BKNG', 'BMRN', 'COST', 'CVS', 'DE', 'ETN', 'GOOGL', 'HD', 'HIG',  'MS', 'MSFT', 'PLD',  'TT', 'UNH', 'V']"
+    "#stock_list = ['AAPL',  'APTV', 'BAC', 'BALL',  'BEP', 'BKNG', 'BMRN', 'COST', 'CVS', 'DE', 'ETN', 'GOOGL', 'HD', 'HIG',  'MS', 'MSFT', 'PLD',  'TT', 'UNH', 'V']\n",
+    "\n",
+    "stock_list = ['AAPL','CVS','ETN','HD','HIG','MS','PLD','UNH']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "ebf4ac46",
    "metadata": {},
    "outputs": [],
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "b2a25ce6",
    "metadata": {},
    "outputs": [
@@ -483,7 +485,7 @@
        "[96 rows x 80 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "a711a95d",
    "metadata": {},
    "outputs": [
@@ -598,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "e99a639d",
    "metadata": {},
    "outputs": [],
@@ -611,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "f64193cf",
    "metadata": {},
    "outputs": [
@@ -1027,7 +1029,7 @@
        "[96 rows x 68 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1038,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "1d826aa5",
    "metadata": {},
    "outputs": [],
@@ -1048,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "fca7e52a",
    "metadata": {},
    "outputs": [
@@ -1464,7 +1466,7 @@
        "[84 rows x 68 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1475,11 +1477,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "b77caf79",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AAPL_Total-Score    56.434545\n",
+       "AAPL_E-Score        65.478333\n",
+       "AAPL_S-Score        43.326061\n",
+       "AAPL_G-Score        47.653939\n",
+       "APTV_Total-Score    57.883182\n",
+       "                      ...    \n",
+       "UNH_G-Score         55.826818\n",
+       "V_Total-Score       52.073788\n",
+       "V_E-Score           51.540000\n",
+       "V_S-Score           45.017576\n",
+       "V_G-Score           55.302879\n",
+       "Length: 68, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.mean()"
+   ]
   }
  ],
  "metadata": {
